fix: gap

--- a/style/global.css
+++ b/style/global.css
@@ -161,7 +161,7 @@ footer section#copyrights {
   .grid-template {
     display: grid;
     grid-template-columns: repeat(4, minmax(0, 1fr));
-    gap: 12px;
+    gap: 32px;
   }
 }
 
